# fgp-daemon

./: Cargo.toml  README.md
examples/: echo_daemon.rs  python_daemon.rs
logs/: user_prompt_submit.json
src/: client.rs  lib.rs  lifecycle.rs  logging.rs  protocol.rs  python.rs  schema.rs  server.rs  service.rs
tests/: error_codes.rs  integration.rs  protocol_compliance.rs  schema_test.rs
