[package]
name = "fgp-daemon"
version = "0.1.0"
edition = "2021"
description = "Fast Gateway Protocol SDK for building low-latency daemon services"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/daemon"
homepage = "https://github.com/fast-gateway-protocol"
documentation = "https://docs.rs/fgp-daemon"
keywords = ["daemon", "socket", "ndjson", "ai-agents", "fgp"]
categories = ["network-programming", "development-tools"]
authors = ["Wolfgang Schoenberger"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
chrono = "0.4"

# Async (optional, for client)
tokio = { version = "1", features = ["rt", "net", "io-util", "time"], optional = true }

# Daemon utilities
daemonize = "0.5"
shellexpand = "3.1"
libc = "0.2"

# UUID for request IDs
uuid = { version = "1.7", features = ["v4"] }

# Python integration (optional)
pyo3 = { version = "0.24.1", features = ["auto-initialize"], optional = true }

[features]
default = []
async-client = ["tokio"]
python = ["pyo3"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

[[example]]
name = "echo_daemon"
path = "examples/echo_daemon.rs"

[[example]]
name = "python_daemon"
path = "examples/python_daemon.rs"
required-features = ["python"]
